--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "clash-generate",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "deploy": "wrangler deploy",
-    "dev": "wrangler dev",
-    "start": "wrangler dev",
-    "cf-typegen": "wrangler types"
-  },
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240614.0",
-    "itty-router": "^3.0.12",
-    "typescript": "^5.4.5",
-    "wrangler": "^3.60.3"
-  }
+	"name": "clash-generate",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"deploy": "wrangler deploy",
+		"dev": "wrangler dev",
+		"start": "wrangler dev",
+		"cf-typegen": "wrangler types"
+	},
+	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20240614.0",
+		"itty-router": "^3.0.12",
+		"typescript": "^5.4.5",
+		"wrangler": "^3.60.3"
+	},
+	"dependencies": {
+		"yaml": "^2.4.5"
+	}
 }
